# social-influence-arena

./: .gitignore  README.md  inference.py  v2sia.ipynb  v3sia_grpo.ipynb
envs/social_influence_env/: README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
envs/social_influence_env/server/: Dockerfile  app.py  arena_env.py  attackers.py  belief.py  llm_attackers.py  questions.py  requirements.txt  rubric.py
envs/social_influence_env/tests/: test_env.py  test_rubric.py
scripts/: eval.py  rollout.py
train/: attacker_data.py  siarena1.ipynb  siarena2.ipynb  train_attackers.ipynb  train_unsloth.ipynb
train/attacker_data/: authority.jsonl  consensus.jsonl  gaslighter.jsonl
